--- a/src/app/shared/components/menu-button/menu-button.component.css
+++ b/src/app/shared/components/menu-button/menu-button.component.css
@@ -20,3 +20,50 @@
         justify-content: center;
     }
 }
+
+@media (max-width: 350px) {
+    .c-menu-button {
+        width: 250px;
+        height: 72px;
+        border: 3px solid black;
+        border-radius: 20px;
+        box-shadow: 0px 10px var(--primary-black);
+        padding: 13px 17px;
+    
+        &:hover {
+            box-shadow: 0px 10px var(--primary-purple1);
+        }
+    }
+}
+
+@media (max-width: 550px) {
+    
+    .c-menu-button {
+        width: 335px;
+        height: 72px;
+        border: 3px solid black;
+        border-radius: 20px;
+        box-shadow: 0px 10px var(--primary-black);
+        padding: 13px 17px;
+    
+        &:hover {
+            box-shadow: 0px 10px var(--primary-purple1);
+        }
+    }
+}
+
+@media (min-width: 551px) {
+
+    .c-menu-button {
+        width: 400px;
+        height: 72px;
+        border: 3px solid black;
+        border-radius: 20px;
+        box-shadow: 0px 10px var(--primary-black);
+        padding: 13px 17px;
+    
+        &:hover {
+            box-shadow: 0px 10px var(--primary-purple1);
+        }
+    }  
+}
