--- a/src/styles.css
+++ b/src/styles.css
@@ -66,16 +66,8 @@ table {
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    min-height: 100vh;
 }
-
-body main {
-    width: 100vw;
-    height: 100vh;
-}
-
-
 
 .heading {
     font-family: 'Space Grotesk';
